www/CSS/dreams.css
/* ... */
.popup{
    padding: 5%;
    font-size: 16px;
	color: var(--color1);
	background-color: var(--color2);
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    z-index: 6;
}
.popup>div{
    background-color: var(--color2);
    padding: 16px;
    font-size: 18px;
    margin: 32px auto;
    width: 50%;
}
.popup a{
    color: var(--color4);
}
input, .popup textarea{
    display: initial;
    background-color: var(--color2);
    color: var(--color1);
    margin: 3% 25%;
    width: 50%;
    font-size: 22px;
    border:0px;
    border-bottom: 2px solid var(--color1);
}

#overlay{
    position: fixed;
    height: 100%;
    z-index: 11;
    display: none;
    opacity: 0;
    background-color: var(--color2);
}
#connectAccount .box{
    cursor: pointer;
    font-size: 12px;
    line-height: 1.5;
    text-align: center;
}
#connectAccount input{
    font-size: 24px;
    padding: 4px;
    border: 2px solid var(--color1);
    font-family: 'Montserrat';
}
#connectAccount{
    max-width: 600px;
    margin: auto;
    padding: 5%;
} 
select{
    background-color: var(--color1);
    font-family: 'Montserrat', sans-serif;
}

.pad{
    padding: 0 6%;
}
.mobile{
    display: none;
}
.mobile img{
    width: 100%;
}
.box{
    background-color: var(--color1);
    color: var(--color2);
    border: 2px solid var(--color2);
    margin:5px;
    padding: 5px;
    overflow: auto;
}
.box input{
    display: initial;
    color: var(--color1);
    background-color: var(--color2);
    border-color: var(--color1);
    margin: 0 5%;
    width: 89.8%;
}
.button{
    color: var(--color1);
    background-color: var(--color2);
    cursor: pointer;
    border: 2px solid var(--color1);
    justify-content: center;
    align-content: center;
    text-align: center;
    padding: 16px;
    margin: 50px auto;
}
#lot .button{
    color: var(--color2);
    background-color: var(--color1);

}
.button:hover{
    color: var(--color4);
}
a:link {
    color: var(--color4);
    text-decoration: none;
}

a:visited {
    color: var(--color4);
    text-decoration: none;
}
a:visited {
    color: var(--color4);
}
a:hover {
    color: var(--color4);
}
a:active {
	color: var(--color5);
}
#sidebar>a, #sidebar a:visited, #sidebar a:link{
    color: var(--color2);
}
/*mobile*/

#sidebar2 div{
    margin: 10px 0;
    cursor: pointer;
}
#sidebar2 div:hover{
    color: var(--color4);
}
#sidebar2 .br{
    margin: 16px 0;
}
#sidebar{
    background-color: var(--color1);
    color: var(--color2);
    overflow: hidden;
    position: fixed;
    height:100%;
    width:0;
    z-index: 12;
    left: 0;
}
#sidebar div{

    margin: 10%;
    cursor: pointer;
}
#sidebar .br{
    width: auto;
    background-color: var(--color2);
}
.flex{
    display: flex;
}
.flex>*{
    flex: 1;
}
.w1{
    width: 100%;
}
.w5{
    width: 50%;
}

/* ==== ELEMNTS STYLED WITH BEM NAMING SCHEMA https://en.bem.info/methodology/css/ === */

/* profileInfo */
.profileInfo {
    text-align: left;
    flex-basis: 25%;
    flex-grow: 0;
    max-width: 100%;
}
.profileInfo__photo{
    display: block;
    width: 150px;
    margin: 0 !important;
     /*^ I hate this but its needed TEMP */
}
.profileInfo__userName{
    cursor: pointer;
    margin-top: 15px;
    margin-bottom: 40px;
    position: relative;
    padding-bottom: 15px;
    font-size: 24px;
    font-weight: 700;

}
.profileInfo__userName > label{
    font-weight: bold;
}
.profileInfo__userName:hover{
    color: var(--color4);
}
.profileInfo__userName:before{
    content: "";
    width: 65px;
    height: 1px;
    border-bottom: 1px solid var(--color1);
    position: absolute;
    bottom: 0;
}
.profileInfo__userName--edit:hover{
    color: var(--color1);
}
.profileInfo__userName--edit{
    display: flex;
}
.profileInfo__userName--edit > input{
    flex-grow: 2;
    margin: 0 0 0 5px;
}

.profileInfo__userAttribute{
    display: flex;
    margin-bottom: 30px;
}
.profileInfo__userAttribute > span{
    margin-left: 5px;
    cursor:pointer;
}
.profileInfo__userAttribute > span:hover:after{
    content: "✎"
}
.profileInfo__userAttribute > span:hover{
    color: var(--color4);
}
.profileInfo__userAttribute > input{
    flex-grow: 2;
    margin: 0px 0px -2px 5px;
}
.profileInfo__userAttribute > label{
    font-weight: bold;
    white-space: nowrap;
}

.profileInfo__logout{
    cursor: pointer;
    font-size: 20px;
}
.profileInfo__logout:hover{
    color: var(--color4);
}

/* profileAssets */
.profileAssets{
    flex-grow: 1;
    position: relative;
    max-width: calc(100% - 50px);
}
.profileAssets__collection{
    display: flex;
    flex-wrap: wrap;
    padding: 5%;
    justify-content: center;
    max-width: 100%;
}
.profileAssets__header{
    text-align: right;
    margin-bottom: 30px;
}
.profileAssets__headerItem{
    text-transform: uppercase;
    display: inline-block;
    font-size: 18px;
    margin-left: 30px;
}
.profileAssets__headerItem:hover{
    color: var(--color5);
    cursor: pointer;
}
.profileAssets__headerItem--current{
    font-weight: bold;
    color: var(--color4);
}
.profileAssets__collectionItem{
    flex-basis: 50%;
}
.accountContent__wrapper{
    width: calc(100% - 16px);
}

.wallet__address{
    max-width: 100%;
    user-select:all;
    overflow: hidden;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.wallet__label{
    font-weight: bold;
    margin-top: 20px;
    display: block;
    width: 100%;
    text-align: center;
}
.wallet__attribute{
    display: block;
    width: 100%;
    text-align: center;
}
/* lotAssets */
.lotAsset__title{
    display: inline-block;
    margin-bottom: 50px;
    position: relative;
    padding-bottom: 15px;
    width: 50%;
    vertical-align: top;
}
.lotAsset__title:before{
    content: "";
    width: 65px;
    height: 1px;
    border-bottom: 1px solid var(--color1);
    position: absolute;
    bottom: 0;
}
.lotAsset__wrapper{
    display: flex;
    flex-wrap: wrap;
}
/* ... */

